[project]
name = "alx-backend-security"
version = "0.1.0"
description = "Django backend with IP tracking middleware"
authors = [
    {name = "Moussa Hassana",email = "moussahassana42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
